--- a/ontology-web-app/package.json
+++ b/ontology-web-app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.0.96",
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
