--- a/ontology-web-app/package.json
+++ b/ontology-web-app/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "@mdi/font": "^7.0.96",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.2.2",
